--- a/languages/en.lang
+++ b/languages/en.lang
@@ -60,8 +60,8 @@ users.needObject=Have to be an Object
 # includes/handle/handleCommand.js
 
 handleCommand.userBanned=তুমাকে বেন করে দেওয়া হয়েছে-!!🚫
-handleCommand.threadBanned=Group Has Been Banned..!⛔️\nPlease Contact Owner Md Jahid Hasan Rajib  For Unban ⚠️
-handleCommand.commandNotExist=⋆✦⋆⎯⎯⎯⎯⎯⎯⎯⎯⋆✦⋆\n\nᴀssᴀʟᴀᴍᴜ ᴀʟᴀɪᴋᴜᴍ-!!🖤💫\n\n ᴛʜᴇ ᴄᴏᴍᴍᴀɴᴅ ʏᴏᴜ ɢᴀᴠᴇ ʜᴀs ɴᴏ ᴠᴀʟᴜᴇ ʜᴇʀᴇ\n ᴀʀᴇ ʏᴏᴜ \n\n •—»✨ %1 ✨«—• \n\n ʟᴏᴏᴋɪɴɢ ғᴏʀ ᴛʜᴇ ᴄᴏᴍᴍᴀɴᴅ\nn\⋆✦⋆⎯⎯⎯⎯⎯⎯⎯⎯⋆✦⋆".
+handleCommand.threadBanned=Group Has Been Banned..!⛔️\nPlease Contact Owner Md Aminul Sordar For Unban ⚠️
+handleCommand.commandNotExist=The command you used doesn't exist, is that "%1" or not".
 handleCommand.commandThreadBanned=Your thread is unable to use command "%1"
 handleCommand.commandUserBanned=You are unable to use command "%1"
 handleCommand.threadNotAllowNSFW=This Commnd Only use Andmi
