--- a/languages/en.lang
+++ b/languages/en.lang
@@ -1,7 +1,7 @@
-# If you want to move down the line, please use \n. e.g: tina\nnazrul.
+# If you want to move down the line, please use \n. e.g: mirai\naminul.
 # After changed, you have to restart the bot to use.
 # Put the # character at the beginning of each sentence if you don't want the code to run those lines. 
-# Thanks to https://www.facebook.com/duong.than.net for translate to English!
+# Thanks to https://www.facebook.com/100071880593545 for translate to English!
 
 # cyber.js 
 
@@ -59,7 +59,7 @@ users.needObject=Have to be an Object
 
 # includes/handle/handleCommand.js
 
-handleCommand.userBanned=তুমাকে বেন করে দেওয়া হয়েছে-!!🚫
+handleCommand.userBanned=You are unable to use bot!\n%1\n%2!!🚫
 handleCommand.threadBanned=Group Has Been Banned..!⛔️\nPlease Contact Owner Md Aminul Sordar For Unban ⚠️
 handleCommand.commandNotExist=The command you used doesn't exist, is that "%1" or not".
 handleCommand.commandThreadBanned=Your thread is unable to use command "%1"
@@ -101,7 +101,7 @@ handleSchedule.exectuteError=Having some error when schedule at module %1, error
 
 # utils/index.js
 
-utils.throwError=ℹ️ [!] ɪғ ᴛʜɪs ᴄᴏᴍᴍᴀɴᴅ ɪs ɴᴏᴛ ᴡᴏʀᴋɪɴɢ, ᴘʟᴇᴀsᴇ ᴜsᴇ ᴀɴᴏᴛʜᴇʀ ᴄᴏᴍᴍᴀɴᴅ ғᴏʀ ᴀɴʏ ᴘʀᴏʙʟᴇᴍ. %1help %2 ᴜsᴇ ғᴏʀ ᴍᴏʀᴇ ᴜsᴀɢᴇ💙🥺
+utils.throwError=ℹ️ [!] The command you are using is not syntax correct, please use %1help %2 for more usage details💙🥺
 # updater.js
 
 updater.latestVersion=You are using the latest version
